--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,35 @@ body {
   background: #28a745; 
   color: #fff;
 }
+
+.get-data { 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 5rem; 
+  color: #000;
+}
+
+.button { 
+  margin-top: 1rem;
+  display: block;
+  width: 15%;
+  text-align: center;
+  background-color: #333;
+  padding: 25px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  outline: 0;
+}
+
+.button:hover { 
+  color: #000;
+  background-color: #fff;
+}
+
+.button:active { 
+  transform: scale(0.91);
+}
