--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,11 @@ body {
   padding: 15px;
 }
 
-.container {
-  padding: 1rem;
-  width: 1200px;
-}
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 25px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 25px;
 }
 
 .card {
@@ -33,6 +29,7 @@ body {
   height: 550px;
   background-color: #333;
   color: #fff;
+  margin-left: 20px;
 }
 
 .card img {
@@ -100,4 +97,35 @@ body {
 
 .button:active { 
   transform: scale(0.91);
+}
+
+
+
+
+@media(max-width: 1280px){
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+  }
+}
+
+@media(max-width: 1024px){
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media(max-width: 768px){
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media(max-width: 640px){
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
